--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -3,3 +3,54 @@
     Layout = null;
 }
 <h3>Cart</h3>
+<button class="btn btn-danger btn-lg btn-block btn-buy" id="btn-pay">
+    <span>Confirm</span>
+    <i class="fa fa-angle-right ml-3"></i>
+</button>
+<div class="row">
+    <div class="col-sm-6 col-lg-4 ml-lg-auto">
+        <p class="text-center">
+            <ul class="text-info" id="results"></ul>
+        </p>
+    </div>
+</div>
+<div class="hidden">
+    <form action="https://secure.paygate.co.za/payweb3/process.trans" method="POST">
+        <input id="PAY_REQUEST_ID" name="PAY_REQUEST_ID" type="hidden" />
+        <input id="CHECKSUM" name="CHECKSUM" type="hidden" />
+        <input id="REDIRECT" type="submit" />
+    </form>
+</div>
+
+
+<script type="text/javascript" src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script type="text/javascript">
+    $('#btn-pay').on('click', function () {
+        let node = document.createElement("li");
+        node.innerText = "Processing...";
+        document.querySelector("#results").appendChild(node);
+        $.get(`/pay/getrequest`)
+            .done(data => success(data))
+            .fail(err => error(err));
+    });
+    function success(data) {
+        let requestNode = document.createElement("li");
+        requestNode.innerText = "Request retrieved";
+        document.querySelector("#results").appendChild(requestNode);
+        requestNode.innerText = data.message;
+        if (data.success) {
+            $("#PAY_REQUEST_ID").val(data.results.PAY_REQUEST_ID);
+            $("#CHECKSUM").val(data.results.CHECKSUM);
+            let redirectNode = document.createElement("li");
+            redirectNode.innerText = "Redirecting...";
+            document.querySelector("#results").appendChild(redirectNode);
+            document.querySelector("#REDIRECT").click();
+        }
+    }
+    function error(data) {
+        console.log("Error");
+        let node = document.createElement("li");
+        node.innerText = data;
+        document.querySelector("#results").appendChild(node);
+    }
+</script>
