--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,7 +1,8 @@
 @{
     ViewData["Title"] = "Cart";
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <h3>Cart</h3>
 <button class="btn btn-danger btn-lg btn-block btn-buy" id="btn-pay">
     <span>Confirm</span>
@@ -23,7 +24,7 @@
 </div>
 
 
-<script type="text/javascript" src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript">
     $('#btn-pay').on('click', function () {
         let node = document.createElement("li");
